Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -14,43 +14,53 @@ layout: default
 <body>
   <h1>Top AI Blog Posts of the Week</h1>
   
-  <h2>Title: The 1xers Guide to LLM, ChatGPT and AI</h2>
-  <h3>Source: Pythonforengineers.com</h3>
+  <h2>Title: Nvidia unveils AI chatbot ‘Chat with RTX’ for local PCs</h2>
+  <h3>Source: ReadWrite</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>Large Language Models (LLMs) are computer programs that can understand, interpret, generate, and respond to human languages.</li>
-    <li>LLMs can be trained on terabytes of data and have billions of parameters, allowing them to generate intelligent responses.</li>
-    <li>ChatGPT is a popular commercial LLM, with ChatGPT 4 being the most advanced version available to paid users.</li>
-    <li>Open source LLMs, such as LLama 2 from Facebook, have gained popularity and offer free usage for certain limits.</li>
-    <li>Running LLMs locally on your machine can be done through tools like Ollama and Mozilla's LLamafile, which provide easy-to-use interfaces.</li>
-    <li>LLMs can also be used for image generation, but caution must be taken to avoid copyright infringement.</li>
-    <li>Following blogs like Ethan Mollick's and Simon Williamson's can help AI engineers stay up to date with advancements in the field.</li>
+    <li>Nvidia has released an early version of a chatbot called Chat with RTX, allowing users to personalize a chatbot with their own content on Windows PCs.</li>
+    <li>The chatbot utilizes custom generative AI and requires an RTX 30 or 40-series GPU with at least 8GB of VRAM.</li>
+    <li>Users can upload their own documents to create summaries and receive relevant answers based on their personal data.</li>
+    <li>Chat with RTX can search YouTube URLs and transcripts for specific mentions or summarize entire videos.</li>
+    <li>The chatbot can process sensitive data locally on a PC without the need to share it with a third party or have an internet connection.</li>
   </ul>
-  <a href="https://new.pythonforengineers.com/blog/the-1xers-guide-to-llm-chatgpt-ai/">Read More</a>
+  <a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read more</a>
   
-  <h2>Title: An open source DuckDB text to SQL LLM</h2>
-  <h3>Source: Motherduck.com</h3>
+  <h2>Title: Sora AI: ‘everyone will be filmmakers’, internet reacts to OpenAI’s new video generator</h2>
+  <h3>Source: ReadWrite</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>MotherDuck has released an open source DuckDB-specific text-to-SQL LLM model called DuckDB-NSQL.</li>
-    <li>The model is trained on synthetic DuckDB SQL queries and general Text-2-SQL questions, making it capable of generating DuckDB snippets and SQL queries for analytical questions.</li>
-    <li>DuckDB-NSQL is aware of all documented features in DuckDB 0.9.2, including official extensions, and can generate the exact DuckDB SQL query you are looking for.</li>
-    <li>The model weights are fully released on Hugging Face and are also available in a quantized GGUF format for use with llama.cpp.</li>
-    <li>You can try out DuckDB-NSQL on the Hugging Face space and prompt the model with natural language instructions to get SQL snippets.</li>
+    <li>OpenAI has announced Sora, a new text-to-video AI that can create realistic and imaginative scenes from text instructions.</li>
+    <li>Reactions to Sora have been varied, with some users enthusiastic and others wary.</li>
+    <li>Sora has been praised for its ability to generate longer scenes compared to other video generation tools.</li>
+    <li>Sora has limitations, including missing out on cause-and-effect details and finer spatial details.</li>
+    <li>Sora is currently in a testing phase and it is unclear if it will be free to use when it launches, but OpenAI is working on safety measures to prevent misuse.</li>
   </ul>
-  <a href="https://motherduck.com/blog/duckdb-text2sql-llm/">Read More</a>
+  <a href="https://readwrite.com/openai-unveils-sora-its-first-text-to-video-model/">Read more</a>
   
-  <h2>Title: RAG Using Unstructured Data and Role of Knowledge Graphs</h2>
-  <h3>Source: Kuzudb.com</h3>
+  <h2>Title: Show me the prompt</h2>
+  <h3>Source: Hamel.dev</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>RAG systems can use unstructured data, such as text files or PDF documents, in addition to structured data.</li>
-    <li>Design decisions for RAG-U systems include what additional data to include (chunks of texts, full documents, or extracted triples) and how to store and fetch this data (vector indices or graph databases).</li>
-    <li>Knowledge graphs (KGs) can be used in RAG-U systems to link chunks of text through relationships in the KG, allowing for more relevant information retrieval.</li>
-    <li>The use of KGs in RAG-U systems raises the question of automatic knowledge graph construction, which is still an active research topic.</li>
-    <li>There are multiple possibilities for future work in RAG-U systems, including exploring the use of matrices instead of vectors, evaluating different graph-based heuristics for chunk extraction, and improving the extraction of high-quality triples from unstructured documents.</li>
+    <li>Many libraries aim to improve the output of LLMs by rewriting or constructing prompts, but they often discourage users from understanding and manipulating the prompts themselves.</li>
+    <li>Intercepting API calls can help engineers understand how these LLM frameworks work by examining the prompts sent to the language model.</li>
+    <li>Setting up a proxy like mitmproxy can log outgoing API requests and provide insight into the prompts and API calls made by LLM frameworks.</li>
+    <li>Examples from LLM libraries like Guardrails, Guidance, Langchain, Instructor, and DSPy demonstrate the value of intercepting API calls to gain a deeper understanding of how these frameworks function.</li>
+    <li>It is important to evaluate the necessity and effectiveness of LLM frameworks, consider alternative approaches, and make informed decisions by inspecting prompts and API calls.</li>
   </ul>
-  <a href="https://kuzudb.com/docusaurus/blog/llms-graphs-part-2">Read More</a>
+  <a href="https://hamel.dev/blog/posts/prompt/">Read more</a>
+  
+  <h2>Title: Most older iPhones, Macs, and iPads are vulnerable to a new GPU security flaw</h2>
+  <h3>Source: AppleInsider</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>A new GPU security flaw named LeftoverLocals allows attackers to access data processed in a device's GPU.</li>
+    <li>Apple has patched the vulnerability in A17 iPhones and M3 Macs, but older models remain vulnerable.</li>
+    <li>The vulnerability is significant because GPUs are increasingly used in AI for processing Large Language Models (LLMs).</li>
+    <li>Users can protect themselves by not giving third-party access to their devices and installing the latest security updates from Apple.</li>
+    <li>It is unclear if Apple has plans to patch the vulnerability in impacted devices going forward.</li>
+  </ul>
+  <a href="https://appleinsider.com/articles/24/01/17/most-older-iphones-macs-and-ipads-are-vulnerable-to-a-new-gpu-security-flaw">Read more</a>
   
 </body>
 </html>
